Fixed global content to footer spacing

--- a/app/assets/stylesheets/info_pages.css.scss
+++ b/app/assets/stylesheets/info_pages.css.scss
@@ -15,7 +15,7 @@
   }
 }
 #terms-txt{
-  margin:0 0 18px 58px;
+  margin:0 0 0 58px;
   width:666px;
   div {
 	margin-bottom:7px;
@@ -134,7 +134,7 @@
 }
 #privacy-txt{
   width:666px;
-  padding:0 0 12px 38px;
+  padding:0 0 0 38px;
   h1 {
 	  margin-bottom:16px;
   }
