--- a/app/assets/stylesheets/profile_settings.css.scss
+++ b/app/assets/stylesheets/profile_settings.css.scss
@@ -49,7 +49,7 @@ margin:0 0 53px 62px;
 			}
 }
 #delete-account {
-margin:0 0 55px 62px;
+margin:0 0 53px 62px;
 		span {
 			float:left;
 			@extend .button;
